--- a/text_analyzer/templates/base.html
+++ b/text_analyzer/templates/base.html
@@ -18,7 +18,7 @@
         {% if user.is_authenticated %}
         <li class="nav-item">{{user.username}}</li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Logout</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'main:logout' %}">Logout</a>
         </li>
         {% else %}
         <li class="nav-item">
