--- a/text_analyzer/templates/index.html
+++ b/text_analyzer/templates/index.html
@@ -4,10 +4,13 @@
     {% for blog in blogs %}
         <h3>{{ blog.title }}</h3>
         <p>{{ blog.text }}</p>
+        <span>Author: {{ blog.author }}</span>
         <span>Votes: {{blog.votes}}</span>
         <span>Created: {{ blog.created }}</span>
-        <a href="{% url 'main:blog_up' blog.id %}" class="btn btn-primary">+</a>
-        <a href="{% url 'main:blog_down' blog.id %}" class="btn btn-primary">-</a>
+        <a href="{% url 'main:blog_up' blog.id %}" class="btn btn-primary
+            {% if blog.is_voted %}disabled{% endif %}">+</a>
+        <a href="{% url 'main:blog_down' blog.id %}" class="btn btn-primary
+            {% if blog.is_voted %}disabled{% endif %}">-</a>
     {% endfor %}
 {% endif %}
 <br>
